// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table/> Produces the correct table for category DATA_VALUES 1`] = `
<div
  className="uua-data-container"
>
  <table
    className="uaa-data-table"
  >
    <TableHead
      headers={
        Array [
          "Date",
          "Data Values",
        ]
      }
    />
    <TableBody
      rows={
        Array [
          Array [
            "Week 22 / 2016",
            11751,
          ],
          Array [
            "Week 23 / 2016",
            11520,
          ],
        ]
      }
    />
  </table>
</div>
`;

exports[`<Table/> Produces the correct table for category FAVORITE_VIEWS and aggregationLevel AVERAGE 1`] = `
<div
  className="uua-data-container"
>
  <table
    className="uaa-data-table"
  >
    <TableHead
      headers={
        Array [
          "Date",
          "Average Map",
          "Average Chart",
          "Average Pivot Table",
          "Average Event Report",
          "Average Event Chart",
          "Average Dashboard",
          "Average",
        ]
      }
    />
    <TableBody
      rows={
        Array [
          Array [
            "Week 22 / 2016",
            19,
            22,
            18,
            20,
            20,
            28,
            104,
          ],
          Array [
            "Week 23 / 2016",
            17,
            22,
            18,
            20,
            20,
            26,
            101,
          ],
        ]
      }
    />
  </table>
</div>
`;

exports[`<Table/> Produces the correct table for category FAVORITE_VIEWS and aggregationLevel SUM 1`] = `
<div
  className="uua-data-container"
>
  <table
    className="uaa-data-table"
  >
    <TableHead
      headers={
        Array [
          "Date",
          "Map",
          "Chart",
          "Pivot Table",
          "Event Report",
          "Event Chart",
          "Dashboard",
          "Data Set Report",
          "Total",
        ]
      }
    />
    <TableBody
      rows={
        Array [
          Array [
            "Week 22 / 2016",
            4457,
            5047,
            4281,
            4649,
            4716,
            6460,
            4414,
            23669,
          ],
          Array [
            "Week 23 / 2016",
            4093,
            5179,
            4275,
            4856,
            4782,
            6193,
            4242,
            23840,
          ],
        ]
      }
    />
  </table>
</div>
`;

exports[`<Table/> Produces the correct table for category FAVORITES_SAVED 1`] = `
<div
  className="uua-data-container"
>
  <table
    className="uaa-data-table"
  >
    <TableHead
      headers={
        Array [
          "Date",
          "Maps",
          "Charts",
          "Pivot Tables",
          "Event Reports",
          "Event Charts",
          "Dashboards",
          "Indicators",
        ]
      }
    />
    <TableBody
      rows={
        Array [
          Array [
            "Week 22 / 2016",
            1658,
            1723,
            1642,
            1748,
            1613,
            1873,
            1826,
          ],
          Array [
            "Week 23 / 2016",
            1593,
            1668,
            1643,
            1745,
            1672,
            1853,
            1905,
          ],
        ]
      }
    />
  </table>
</div>
`;

exports[`<Table/> Produces the correct table for category TOP_FAVORITES 1`] = `
<div
  className="uua-data-container"
>
  <table
    className="uaa-data-table"
  >
    <TableHead
      headers={
        Array [
          "Position",
          "Name",
          "Views",
          "ID",
          "Created",
        ]
      }
    />
    <TableBody
      rows={
        Array [
          Array [
            1,
            "ANC: ANC 3 coverage this year (gauge)",
            1,
            "dw62KezChat",
            "Nov 10, 2014",
          ],
          Array [
            2,
            "Immunization: IPT 1 and 2 Coverage",
            1,
            "nwqNUFG9Vky",
            "Jul 31, 2012",
          ],
        ]
      }
    />
  </table>
</div>
`;

exports[`<Table/> Produces the correct table for category USERS 1`] = `
<div
  className="uua-data-container"
>
  <table
    className="uaa-data-table"
  >
    <TableHead
      headers={
        Array [
          "Date",
          "Active Users",
          "Total Users",
        ]
      }
    />
    <TableBody
      rows={
        Array [
          Array [
            "Week 22 / 2016",
            227,
            262,
          ],
          Array [
            "Week 23 / 2016",
            234,
            262,
          ],
        ]
      }
    />
  </table>
</div>
`;

exports[`<TableBody /> Matches the snapshot 1`] = `
<tbody>
  <TableRow
    cells={
      Array [
        "value a1",
        "value a2",
      ]
    }
    key="row-0"
  />
  <TableRow
    cells={
      Array [
        "value b1",
        "value b2",
      ]
    }
    key="row-1"
  />
</tbody>
`;

exports[`<TableHead /> Matches the snapshot 1`] = `
<thead>
  <tr>
    <th
      key="h-0"
    >
      Header 1
    </th>
    <th
      key="h-1"
    >
      Header 2
    </th>
  </tr>
</thead>
`;

exports[`<TableRow /> Matches the snapshot 1`] = `
<tr>
  <td
    key="cell-0"
  >
    value a1
  </td>
  <td
    key="cell-1"
  >
    value a2
  </td>
</tr>
`;
